asset/css/style.css
:root {
    /* #region colors */
    --white: #ffffff;
    --grey: #4e5258;
    --lightgreen: #adff2f;
    --lightgrey: #808080;
    --bkg-siderbar: #000000;
    --bkg-footer: #282828;
    --bkg-container: #141922;
    --bkg-upgrade: #080b1280;
    /* #endregion colors */
    --siderbarw-lg: 230px;
    --footerh_lg: 90px;
    --buttonw: 12rem;
}

/* #region debug */
.debug [class^=col_] {
    background-color: aqua;
}

.debug .container {
height: 100%;
}
.debug .sidebar {
    background-color: red;
}


/* #endregion debug */
/* #region Utilitys */
ul {
    list-style-type: none;
}

.greenbar {
    background-color: var(--lightgreen);
    display: none;
    width: 50%;
    margin: auto;
    height: 2px;
}
.container .recently h2,
.container .make_for h2,
.container .popular h2  {
    color: var(--white);
    font-size: 1.5rem;
    padding: 1.25rem 0 0.9rem 0;
}
.container .make_for p,
.container .popular p{
    color: var(--grey);
    font-size: 0.7rem;
    padding: 0.3rem 0;
}
.container .recently .row,
.container .popular .row,
.container .make_for .row
{
    padding: 1.5rem 0 ;
    width: 100%;
    flex-wrap: wrap;
    margin: 0 -0.5rem;
}
/* #region cards */
.card{
    flex-direction: column;
    padding:0.9rem 0.5rem;
}
.card .top{
    
    padding-bottom: 0.6rem;
}
.card .top .ball{
    border-radius: 50%;
}
.card .top .img{
    width: 100%;
    aspect-ratio: 1/1;
    overflow: hidden;
    position: relative;
}
.card:hover .top .img img{
    filter: brightness(0.5);
}
.card:hover .top .img i{
    display: block;
}
.card .top .img img{
    max-width: 100%;
    object-fit: cover;
}
.card .top .img i{
    display: none;
    position: absolute;
    text-align: center;
    top: calc(50% - 32px);
    left: calc(50% - 32px);
    color: var(--white);
    z-index: 2;
}
.card .bottom h3{
    color: var(--white);
    font-size: 1rem;
    line-height: 0.9;
    
    
}
.card .bottom p{
    color: var(--lightgrey);
    font-size: 0.7rem;
    line-height: 2;
}
/* #endregion cards */



/* #endregion Utilitys */

/* #region main */
/* #region siderbar*/

.sidebar{
    height: calc(100vh - var(--footerh_lg) );
    width: var(--siderbarw-lg);
    background-color: var(--bkg-siderbar);
}

/* #endregion siderbar*/
/* #region section */

section{
    width: calc(100% - var(--siderbarw-lg));
    height: calc(100vh - var(--footerh_lg) );
    
}
/* #region upgrade */

.upgrade{
    margin: -1.5rem 0 0 -1.5rem;
    padding: 1.2rem 0.3rem 1.7rem 0;
    background-color: var(--bkg-upgrade);
    position: fixed;
    justify-content: end;
    width: calc(100% - 1rem - var(--siderbarw-lg));
}

.upgrade button{
    background-color: var(--bkg-upgrade);
    border: 1px solid var(--white);
    color: var(--white);
    border-radius: 1rem;
    padding: 0.9rem;
    width: var(--buttonw)
}
.upgrade button:hover{
    scale: 1.1;
}
/* #endregion upgrade */
/* #region container */
.container {
    background-color: var(--bkg-container);
    padding: 1.5rem;
    overflow-y: auto;
    max-height: 100%;

}

/* #region nav*/
nav{
    margin-top: 92px;
    width: 100%;
    justify-content: center;
}
nav a {
    color: var(--grey);
    text-decoration: none;
    font-size: 0.7rem;
}

nav li{
    padding: 0 0.7rem;
}
nav li:hover a{
    color: var(--white);
}

nav li:first-child .greenbar{
    display: block;
}

/* #endregion nav*/
/* #region recently */
/* #endregion recently */
/* #region popular */




/* #endregion popular */



/* #endregion container */

/* #endregion section */
/* #endregion main */
footer{
    background-color: var(--bkg-footer);
    height: 90px;
    z-index: 2;
}

